# date-mcp

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  pyproject.toml
src/date_mcp/: __init__.py  main.py  server.py
