[project]
name = "date-mcp"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gary Rogers" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.21.1",
]

[project.scripts]
date-mcp = "date_mcp.main:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
